# portfolio

./: .gitignore  Dockerfile  docker-compose.yml  gl.html  index.html  package-lock.json  package.json  rsw.toml  vite.config.js
.github/workflows/: build-static-site.yml  deploy-static-site.yml
@rsw/game-of-life/src/: lib.rs
@rsw/gl-test/: Cargo.toml  README.md
@rsw/gl-test/shaders/: flatcolor.frag
@rsw/gl-test/src/: lib.rs  test_app.rs  util.rs
@rsw/gl-test/src/app/: mod.rs
@rsw/gl-test/src/render/: light.rs  mesh.rs  mod.rs  program.rs  shader.rs
@rsw/gl-test/src/shader/: mod.rs  program.rs  shader.rs  simple.f.glsl  simple.v.glsl  simple.vert
@rsw/gl-test/src/shaders/: noiseanimation.vert  perlin.glsl  simple.frag
src/: module.js  resizer.js
