[package]
name = "gl-test"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.55"
wasm-bindgen = "0.2.83"
nalgebra = "0.32.2"
noise = "0.8"
getrandom = { version = "0.2.10", features = ["js"] }
include_dir = { version = "0.7.4", features = ["glob"] }

[dependencies.web-sys]
version = "0.3.53"
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlRenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'WebGlUniformLocation',
  'Window',
]